service-mesh/networking/5_gateway-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: banking-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "api.rohandevops.co.in"
    - "rohandevops.co.in"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "api.rohandevops.co.in"
    - "rohandevops.co.in"
    tls:
      mode: SIMPLE
      credentialName: banking-tls-cert
---
# Routes ACME challenge for api.rohandevops.co.in
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: acme-challenge-api
  namespace: istio-system
spec:
  hosts:
  - "api.rohandevops.co.in"
  gateways:
  - istio-system/banking-gateway
  http:
  - match:
    - uri:
        prefix: "/.well-known/acme-challenge/"
    route:
    - destination:
        host: cm-acme-http-solver-wsxjh.istio-system.svc.cluster.local
        port:
          number: 8089
---
# Routes ACME challenge for rohandevops.co.in
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: acme-challenge-root
  namespace: istio-system
spec:
  hosts:
  - "rohandevops.co.in"
  gateways:
  - istio-system/banking-gateway
  http:
  - match:
    - uri:
        prefix: "/.well-known/acme-challenge/"
    route:
    - destination:
        host: cm-acme-http-solver-687hh.istio-system.svc.cluster.local
        port:
          number: 8089
---
# Main app - only after challenge routes above
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: banking-vs
  namespace: banking-prod
spec:
  hosts:
  - "api.rohandevops.co.in"
  - "rohandevops.co.in"
  gateways:
  - istio-system/banking-gateway
  http:
  - route:
    - destination:
        host: bankapp-banking-platform-active.banking-prod.svc.cluster.local
        port:
          number: 80
